# pyFEM

./: README.md  TEMP.ipynb  pyproject.toml
demos/: Demo.ipynb
fem/: Demo.ipynb  LinearElement.ipynb  ODE_BVP_Quadratic.ipynb  QuadraticElement.ipynb  Rayleigh-Ritz.ipynb
